# urbanize

./: README.md
.github/workflows/: static.yml
urbanize-server/: Cargo.toml
urbanize-server/src/: main.rs
urbanize-web/: Cargo.toml  build.bat  city.css  editor.css  editor.html  editor.js  index.html
urbanize-web/pkg/: package.json  urbanize.d.ts  urbanize.js  urbanize_bg.wasm  urbanize_bg.wasm.d.ts
urbanize-web/pkg/snippets/web-sugars-8b55317e9d991f4a/: inline0.js
urbanize-web/src/: city.rs  lib.rs  map_features.rs  road.rs  zone.rs
