[package]
name = "urbanize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1.7"
fastrand = "2.1.0"
glam = "0.27.0"
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.2"
wasm-bindgen = "0.2.92"
web-sugars = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCollection',
]
